# myoNT

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
.github/workflows/: release.yml
scripts/: eac-blessed-launch.sh  eac-blessed.desktop  install-desktop.sh
src/: App.tsx  db.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: Editor.tsx  Logo.tsx  PageHeader.tsx  Sidebar.tsx
src/lib/: notion.ts  updater.ts
